# serializer version: 1
# name: test_auth_and_cookies_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/api/cookies": {
        "get": {
          "operationId": "getAuthedandcookiescontrollerApiCookies",
          "parameters": [
            {
              "deprecated": false,
              "name": "session_id",
              "in": "cookie",
              "schema": {
                "type": "string"
              },
              "required": true
            },
            {
              "deprecated": false,
              "name": "CSRF",
              "in": "cookie",
              "schema": {
                "type": "string"
              },
              "required": true
            }
          ],
          "responses": {
            "200": {
              "description": "OK",
              "content": {
                "application/json": {
                  "schema": {
                    "items": {
                      "type": "integer"
                    },
                    "type": "array"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "401": {
              "description": "Raised when auth was not successful",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false,
          "security": [
            {
              "jwt": []
            }
          ]
        }
      }
    },
    "components": {
      "schemas": {
        "ErrorDetail": {
          "properties": {
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array"
            },
            "msg": {
              "type": "string"
            },
            "type": {
              "type": "string"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {
        "jwt": {
          "type": "http",
          "description": "JWT token auth",
          "scheme": "Bearer",
          "bearerFormat": "JWT"
        }
      }
    }
  }
  '''
# ---
# name: test_example_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/api/v1/example": {
        "post": {
          "operationId": "postExamplecontrollerApiV1Example",
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/_ExampleModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "ErrorDetail": {
          "properties": {
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array"
            },
            "msg": {
              "type": "string"
            },
            "type": {
              "type": "string"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details.",
          "example": {
            "detail": [
              {
                "msg": "GMPXMVbyXHUfymCDaloV",
                "loc": [
                  "NiPhGgaTklZTpXCJkWJY"
                ]
              }
            ]
          }
        },
        "_ExampleModel": {
          "properties": {
            "age": {
              "type": "integer",
              "maximum": 10,
              "exclusiveMinimum": 0
            },
            "username": {
              "type": "string"
            },
            "status": {
              "$ref": "#/components/schemas/_Status"
            },
            "email": {
              "type": "string"
            },
            "salary": {
              "type": "number"
            },
            "tags": {
              "items": {
                "type": "string"
              },
              "type": "array"
            },
            "metadata": {
              "additionalProperties": {
                "type": "string"
              },
              "type": "object"
            }
          },
          "type": "object",
          "required": [
            "age",
            "username",
            "status",
            "email",
            "salary",
            "tags",
            "metadata"
          ],
          "title": "_ExampleModel",
          "example": {
            "age": 8,
            "username": "GMPXMVbyXHUfymCDaloV",
            "status": "active",
            "email": "NiPhGgaTklZTpXCJkWJY",
            "salary": -2895104.6059761,
            "tags": [
              "vWnrQEEKdspKjyjnWXsv"
            ],
            "metadata": {
              "CvtRxKGXgmQyAUnyEOtp": "wYkAshoKeJpPGLqzLeFW"
            }
          }
        },
        "_Status": {
          "enum": [
            "active",
            "inactive"
          ],
          "title": "_Status"
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_file_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/file": {
        "get": {
          "operationId": "getFilecontrollerFile",
          "requestBody": {
            "content": {
              "multipart/form-data": {
                "schema": {
                  "properties": {
                    "file_name1": {
                      "type": "string",
                      "format": "binary"
                    },
                    "second_file": {
                      "type": "string",
                      "format": "binary"
                    }
                  },
                  "type": "object",
                  "required": [
                    "file_name1",
                    "second_file"
                  ],
                  "title": "_SeveralFiles"
                },
                "encoding": {
                  "file_name1": {
                    "contentType": "application/json"
                  },
                  "second_file": {
                    "contentType": "application/json"
                  }
                }
              }
            },
            "required": true
          },
          "responses": {
            "200": {
              "description": "OK",
              "content": {
                "application/json": {
                  "schema": {
                    "items": {
                      "type": "integer"
                    },
                    "type": "array"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "ErrorDetail": {
          "properties": {
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array"
            },
            "msg": {
              "type": "string"
            },
            "type": {
              "type": "string"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_user_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/api/v1/user": {
        "summary": "Handles users",
        "post": {
          "operationId": "postUsercontrollerApiV1User",
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": {
                    "type": "integer"
                  },
                  "type": "object"
                }
              }
            },
            "required": true
          },
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/_UserModel"
                  }
                }
              }
            },
            "400": {
              "description": "Raised when request components cannot be parsed",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "ErrorDetail": {
          "properties": {
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array"
            },
            "msg": {
              "type": "string"
            },
            "type": {
              "type": "string"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        },
        "_UserModel": {
          "properties": {
            "age": {
              "type": "integer",
              "maximum": 100,
              "minimum": 0
            },
            "username": {
              "type": "string",
              "deprecated": true
            },
            "email": {
              "type": "string"
            }
          },
          "type": "object",
          "required": [
            "age",
            "username",
            "email"
          ],
          "title": "_UserModel"
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
